== Version 2.8.1 (unreleased)

Bug Fixes:
* Regression: accept enable_starttls_auto: false @ahorek

== Version 2.8.0 (3-Dec-2022)

Breaking changes:
* Add Ruby 3.1 support (deivid-rodriguez, voxik, eregon)
* Drop support for Ruby < 2.5 (deivid-rodriguez, voxik)
* Message#without_attachments! now deletes nested attachments. (TylerRick)
* Sendmail and exim delivery now raise DeliveryError when the command exits with a nonzero exitstatus. (benmmurphy, CoolElvis)
* Sendmail and exim delivery :arguments option must be an array of string args. (benmmurphy)
* Passing unparsed headers to Mail::Field.new is no longer supported. Use Mail::Field.parse. (jeremy)
* Removed long-deprecated features: Message#register_for_delivery_notification, #has_transfer_encoding?, #add_transfer_encoding, #transfer_encoding, #message_content_type, #mime_parameters, #encode!, and Part#inline_content_id. (jeremy)

Deprecations:
* Deprecates Mail::CheckDeliveryParams in favour of Mail::SmtpEnvelope

Compatibility:
* Handle a wide variety of non-RFC Message-ID formats. (peterkovacs)
* Normalize Quoted-Printable line endings for text content. (jeremy)
* Gracefully parse invalid dates in Date and Received headers. (okkez)
* Converting to multipart moves Content-* headers to the new part. (kirikak2)
* Multipart Content-Type no longer includes a needless charset param. (kirikak2)
* Replies prefix subject with "Re: " instead of "RE: " per 5322 3.6.5. (mashedcode)
* Gracefully handle multiple, possibly-invalid headers for what should be singular fields. (rosa)
* SMTP delivery with enable_tls/starttls/starttls_auto: false now disables these options, since starttls is now :auto by default in upstream net-smtp. (jeremy)

Features:
* Message#inspect_structure and PartsList#inspect_structure pretty-print the hierarchy of message parts. (TylerRick)
* `an_attachment_with_mime_type` matcher added to match attachments by mime type

Bug Fixes: